--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <img title="Hornets" src="/hornets-comic/assets/images/header.png">
+      <img title="Hornets" src="/assets/images/header.png">
     </header>
 
     <main id="content" class="main-content" role="main">
