--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,4 +26,10 @@
             width: 50%;
         }
     }
+
+    img {
+        display: block;
+        margin: 0 auto;
+        max-height: 100vh;
+    }
 }
