--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
 <footer class="site-footer">
     <span class="site-footer-credits">© Copyright 2023 Ethan Ross</span>
 </footer>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "5495ffbb7e9048f2bca2680f5dfe8adc"}'></script><!-- End Cloudflare Web Analytics -->
