added mailing list link (ATTEMPT 1)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,10 @@
 <footer class="site-footer">
+    <p class="subscribe">
+        <a href="mailto:hornetscomic+subscribe@googlegroups.com?subject=Subscribe%20to%20Hornets!&body=Send%20me%20an%20email%20when%20new%20comics%20are%20published!">
+            Get notified
+        </a>
+        when new comics are published!
+    </p>
     <span class="site-footer-credits">© Copyright 2024 Ethan Ross</span>
 </footer>
 <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "5495ffbb7e9048f2bca2680f5dfe8adc"}'></script><!-- End Cloudflare Web Analytics -->
