--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,7 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
 
-      <footer class="site-footer">
-        <span class="site-footer-credits">© Copyright 2024 Ethan Ross</span>
-      </footer>
-      <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "5495ffbb7e9048f2bca2680f5dfe8adc"}'></script><!-- End Cloudflare Web Analytics -->
+      {% include footer.html %}
     </main>
   </body>
 </html>
