--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,8 @@
 }
 
 .main-content {
+    color: #333;
+
     h1, h2, h3, h4, h5, h6 {
         color: darkorange;
         text-align: center;
@@ -36,5 +38,10 @@
 }
 
 .site-footer {
+    color: #333;
     text-align: center;
+}
+
+.subscribe {
+    color: darkorange;
 }
