--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <footer class="site-footer">
     <p class="subscribe">
         <a href="mailto:hornetscomic+subscribe@googlegroups.com?subject=Subscribe%20to%20Hornets!&body=Send%20me%20an%20email%20when%20new%20comics%20are%20published!">
-            Get notified
-        </a>
+            Get notified</a>
         when new comics are published!
     </p>
     <span class="site-footer-credits">© Copyright 2024 Ethan Ross</span>
