added change to mailing list to the link doesnt fail (ATTEMPT 3)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
     <p class="subscribe">
-        <a href="mailto:hornetscomic+subscribe@googlegroups.com?subject=Subscribe%20to%20Hornets!&body=Send%20me%20an%20email%20when%20new%20comics%20are%20published!">
+        <a href="mailto:hornetscomic%2bsubscribe@googlegroups.com?subject=Subscribe%20to%20Hornets!&body=Send%20me%20an%20email%20when%20new%20comics%20are%20published!">
             Get notified</a>
         when new comics are published!
     </p>
